# web_fw_play

./: README.md
fast101/: customers.py  db.py  fixtures.py  main.py  prices.py  products.py  store.py  users.py
fast102/: api.py  customers.py  fixtures.py  main.py  products.py  transactions.py  users.py
fast102/static/templates/: item.html
hellow_paw/: .gitignore  README.md  pyproject.toml
hellow_paw/data/: log.db
hellow_paw/src/hellow_paw/: __init__.py  app.py
pawspot/: README.md  pyproject.toml
pawspot/src/: test.db
pawspot/src/pawspot/: media_model.py  wsgi.py
pawspot/src/pawspot/.spotify_caches/: 16f9006e-2218-4f6c-a2b2-8eb50afe3a32
pawspot/src/pawspot/pawspot_fastapi/: media_model.py  startserver.bat  test_api.py  test_cache
pawspot/src/pawspot/pawspot_flask/: __init__.py  forms.py  routes.py  sample_out
pawspot/src/pawspot/pawspot_funcs/: playlist_maker.py  spot_funcs.py
pawspot/src/pawspot/static/: Untitled Diagram.drawio  main.css
pawspot/src/pawspot/static/templates/: all_artist_tracks.html  elaborate.html  json_bootstrap.html  layout.html  login.html  made_elaborate.html  return_artists.html  return_elaborate.html  search.html  search_results.html  show_elaborate.html  show_tracklist.html
pawspot/tests/: test_play.py
webportal/: gpt.py  requirements.txt
webportal/core/: asgi.py  enums.py  settings.py  urls.py  wsgi.py
webportal/store/: admin.py  forms.py  models.py  urls.py  views.py
webportal/store/context_processors/: context_processors.py
webportal/templates/: base.html  home.html
(+15 files in other folders)
